<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_math"
    android:weightSum="3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="50">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="45"
            android:weightSum="50">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:hint="@string/ingrese"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:id="@+id/eNum1"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_gravity="center"
                android:hint="@string/ingrese"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:id="@+id/eNum2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:hint="@string/calcular"
                android:layout_weight="15"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bCalc"
                android:onClick="method_1"/>
        </LinearLayout>
        <RadioGroup android:id="@+id/rgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:clickable="true">
            <RadioButton android:id="@+id/rsuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/suma"
                android:textColor="@color/black"
                android:onClick="method"
                />
            <RadioButton android:id="@+id/rresta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/resta"
                android:onClick="method"/>
            <RadioButton android:id="@+id/rmult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/multiplicacion"
                android:onClick="method"/>
            <RadioButton android:id="@+id/rdiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/division"
                android:onClick="method"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"/>
        <TextView   android:id="@+id/tresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>